lista interfaz crud clientes

--- a/src/app/shared/profile/profile.component.html
+++ b/src/app/shared/profile/profile.component.html
@@ -34,8 +34,8 @@
           <div class="card">
               <div class="card-body text-center">
                   <h4 class="card-title">Imagen de perfil</h4>
-                  <img *ngIf="imagenTemp" [src]="imagenTemp" alt="therapist" height="150" width="150">
-                  <img *ngIf="!imagenTemp" [src]="usuario.img | imagen: 'therapist'" alt="therapist" height="150" width="150">
+                  <img *ngIf="imagenTemp" [src]="imagenTemp" alt="client" height="150" width="150">
+                  <img *ngIf="!imagenTemp" [src]="usuario.img | imagen: 'client'" alt="client" height="150" width="150">
                   <br><br>
                   <div class="input-group">
                     <div class="custom-file">
