--- a/src/app/pages/client/client.component.html
+++ b/src/app/pages/client/client.component.html
@@ -1,3 +1,111 @@
-<p>
-  Clientes
-</p>
+<div class="animated fadeIn">
+  <div class="card">
+    <div class="card-body">
+
+      <div class="row justify-content-around">
+        <div class="col-4">
+          <h2>Clientes Registrados</h2>
+        </div>
+        <div class="col-4">
+
+        </div>
+      </div>
+      <br>
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-12 col-lg-12">
+          <div class="row justify-content-center">
+              <!--end of col-->
+              <div class="input-group col-sm-8">
+                <div class="input-group-addon"><i class="fa fa-search"></i></div>
+                <input class="form-control form-control-lg form-control-borderless" type="search"
+                  [ngModelOptions]="{standalone: true}" [(ngModel)]="Search"
+                  placeholder="Buscar por nombre, numero de identificación ó edad">
+              </div>
+              <!--end of col-->
+              <div class="col-sm-4">
+                <button type="button" class="btn btn-lg btn-success" data-toggle="modal" data-target="#exampleModal">
+                  <i class="fa fa-user-plus h4 text-body"></i> Agregar Clientes
+                </button>
+              </div>
+            </div>
+        </div>
+        <!--end of col-->
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col-sm-12">
+          <table class="table table-responsive" *ngIf="client.length > 0; else noDBPacientes">
+            <table class="table table-striped table-bordered" [mfData]="client | dataFilter : Search"
+              #mf="mfDataTable" cellspacing="0" width="100%">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th class="th-sm" scope="col">Nombres</th>
+                  <th scope="col">Apellidos</th>
+                  <th scope="col">Tipo documento</th>
+                  <th scope="col">Numero documento</th>
+                  <th scope="col">Fecha de Nacimiento</th>
+                  <th scope="col">Telefono</th>
+                  <th scope="col">RSS</th>
+                  <th scope="col">Entidad</th>
+                  <th scope="col">Acciones</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let item of mf.data; let i = index">
+                  <th scope="row">{{ i+1 }}</th>
+                  <td>{{item.nombre1 + " " + item.nombre2}}</td>
+                  <td>{{item.apellido1 + " " + item.apellido2}}</td>
+                  <td>{{item.tpdoc}}</td>
+                  <td>{{item.numdoc}}</td>
+                  <td>{{item.fechaN}}</td>
+                  <td>{{item.celular}}</td>
+                  <td>{{item.regimenSS}}</td>
+                  <td>{{item.entidad}}</td>
+                  <td>
+                    <button type="button" class="btn btn-secondary fa fa-address-card-o" data-toggle="modal"
+                      tooltip="Editar usuario" tooltip="Menu paciente">
+                    </button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </table>
+
+          <!-- pager -->
+
+          <!-- <nav aria-label="Page navigation example">
+            <ul *ngIf="pager.pages && pager.pages.length" class="pagination justify-content-center">
+              <li class="page-item" [ngClass]="{disabled:pager.currentPage === 1}">
+                <a class="page-link" (click)="setPage(1)"><i class="mdi mdi-chevron-double-left"></i></a>
+              </li>
+              <li class="page-item" [ngClass]="{disabled:pager.currentPage === 1}">
+                <a class="page-link" (click)="setPage(pager.currentPage - 1)"><i class="mdi mdi-chevron-left"></i></a>
+              </li>
+              <li class="page-item" *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
+                <a class="page-link" (click)="setPage(page)">{{page}}</a>
+              </li>
+              <li class="page-item" [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
+                <a class="page-link" (click)="setPage(pager.currentPage + 1)"><i class="mdi mdi-chevron-right"></i></a>
+              </li>
+              <li class="page-item" [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
+                <a class="page-link" (click)="setPage(pager.totalPages)"><i class="mdi mdi-chevron-double-right"></i></a>
+              </li>
+            </ul>
+          </nav> -->
+
+        </div>
+        <ng-template #noDBPacientes>
+          <div>
+            <br>
+            <h3 style="text-align:center;">No hay pacientes registrados en el sistema</h3>
+          </div>
+        </ng-template>
+
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
