--- a/src/app/pages/client/client.component.html
+++ b/src/app/pages/client/client.component.html
@@ -23,7 +23,7 @@
               </div>
               <!--end of col-->
               <div class="col-sm-4">
-                <button type="button" class="btn btn-lg btn-success" data-toggle="modal" data-target="#exampleModal">
+                <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">
                   <i class="fa fa-user-plus h4 text-body"></i> Agregar Clientes
                 </button>
               </div>
@@ -31,37 +31,38 @@
         </div>
         <!--end of col-->
       </div>
-
+      <br>
+      <br>
       <div class="row justify-content-center">
         <div class="col-sm-12">
-          <table class="table table-responsive" *ngIf="client.length > 0; else noDBPacientes">
-            <table class="table table-striped table-bordered" [mfData]="client | dataFilter : Search"
+          <table class="table table-responsive" *ngIf="client1.length > 0; else noDBPacientes">
+            <table class="table table-striped table-bordered" [mfData]="client1 | dataFilter : Search"
               #mf="mfDataTable" cellspacing="0" width="100%">
               <thead>
                 <tr>
                   <th scope="col">#</th>
-                  <th class="th-sm" scope="col">Nombres</th>
-                  <th scope="col">Apellidos</th>
-                  <th scope="col">Tipo documento</th>
-                  <th scope="col">Numero documento</th>
-                  <th scope="col">Fecha de Nacimiento</th>
-                  <th scope="col">Telefono</th>
-                  <th scope="col">RSS</th>
-                  <th scope="col">Entidad</th>
+                  <th class="th-sm" scope="col">Tipo de documento</th>
+                  <th scope="col">Numero de documento</th>
+                  <th scope="col">Primer nombre</th>
+                  <th scope="col">Segundo Nombre</th>
+                  <th scope="col">Primer Apellido</th>
+                  <th scope="col">Segundo Apellido</th>
+                  <th scope="col">Celular</th>
+                  <th scope="col">Correo</th>
                   <th scope="col">Acciones</th>
                 </tr>
               </thead>
               <tbody>
                 <tr *ngFor="let item of mf.data; let i = index">
                   <th scope="row">{{ i+1 }}</th>
-                  <td>{{item.nombre1 + " " + item.nombre2}}</td>
-                  <td>{{item.apellido1 + " " + item.apellido2}}</td>
-                  <td>{{item.tpdoc}}</td>
-                  <td>{{item.numdoc}}</td>
-                  <td>{{item.fechaN}}</td>
-                  <td>{{item.celular}}</td>
-                  <td>{{item.regimenSS}}</td>
-                  <td>{{item.entidad}}</td>
+                  <td>{{item.identification_type}}</td>
+                  <td>{{item.identification_number}}</td>
+                  <td>{{item.first_name}}</td>
+                  <td>{{item.second_name}}</td>
+                  <td>{{item.surname}}</td>
+                  <td>{{item.second_surname}}</td>
+                  <td>{{item.phone}}</td>
+                  <td>{{item.email}}</td>
                   <td>
                     <button type="button" class="btn btn-secondary fa fa-address-card-o" data-toggle="modal"
                       tooltip="Editar usuario" tooltip="Menu paciente">
@@ -74,7 +75,7 @@
 
           <!-- pager -->
 
-          <!-- <nav aria-label="Page navigation example">
+          <nav aria-label="Page navigation example">
             <ul *ngIf="pager.pages && pager.pages.length" class="pagination justify-content-center">
               <li class="page-item" [ngClass]="{disabled:pager.currentPage === 1}">
                 <a class="page-link" (click)="setPage(1)"><i class="mdi mdi-chevron-double-left"></i></a>
@@ -92,7 +93,7 @@
                 <a class="page-link" (click)="setPage(pager.totalPages)"><i class="mdi mdi-chevron-double-right"></i></a>
               </li>
             </ul>
-          </nav> -->
+          </nav>
 
         </div>
         <ng-template #noDBPacientes>
