--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -4,7 +4,7 @@
 
       <div class="row justify-content-around">
         <div class="col-4">
-          <h2>Clientes Registrados</h2>
+          <h2>Productos Registrados</h2>
         </div>
         <div class="col-4">
 
@@ -32,24 +32,36 @@
         <!--end of col-->
       </div>
 
+      <br><br>
+
       <div class="row justify-content-center">
         <div class="col-sm-12">
-          <table class="table table-responsive" *ngIf="productos.length > 0; else noDBPacientes">
+          <table class="table table-responsive" *ngIf="productos.length > 0; else noDBProductos">
             <table class="table table-striped table-bordered" [mfData]="productos | search : Search : productos[0]"
               #mf="mfDataTable" cellspacing="0" width="100%">
               <thead>
                 <tr>
-                  <th scope="col">#</th>
-                  <th class="th-sm" scope="col">Nombre</th>
-                  <th scope="col">Precio</th>
+                  <th class="text-center"  scope="col">#</th>
+                  <th class="text-center" scope="col">Nombre</th>
+                  <th class="text-center" scope="col">Precio</th>
+                  <th class="text-center" scope="col">Acciones</th>
                 </tr>
               </thead>
               <tbody>
                 <tr *ngFor="let item of mf.data; let i = index">
-                  <th scope="row">{{ i+1 }}</th>
-                  <td>{{item.nombre }}</td>
-                  <td>{{item.precio }}</td>
-                  <td>
+                  <th class="text-center" scope="row">{{ i+1 }}</th>
+                  <td class="text-center">{{item.nombre }}</td>
+                  <td class="text-center">{{item.precio }}</td>
+                  <td class="text-center">
+                    <button type="button" class="btn btn-secondary fa fa-address-card-o" data-toggle="modal"
+                      tooltip="Editar usuario" tooltip="Menu paciente">
+                    </button>
+                    <button type="button" class="btn btn-secondary fa fa-address-card-o" data-toggle="modal"
+                      tooltip="Editar usuario" tooltip="Menu paciente">
+                    </button>
+                    <button type="button" class="btn btn-secondary fa fa-address-card-o" data-toggle="modal"
+                      tooltip="Editar usuario" tooltip="Menu paciente">
+                    </button>
                     <button type="button" class="btn btn-secondary fa fa-address-card-o" data-toggle="modal"
                       tooltip="Editar usuario" tooltip="Menu paciente">
                     </button>
@@ -61,7 +73,7 @@
 
           <!-- pager -->
 
-          <!-- <nav aria-label="Page navigation example">
+          <nav aria-label="Page navigation example">
             <ul *ngIf="pager.pages && pager.pages.length" class="pagination justify-content-center">
               <li class="page-item" [ngClass]="{disabled:pager.currentPage === 1}">
                 <a class="page-link" (click)="setPage(1)"><i class="mdi mdi-chevron-double-left"></i></a>
@@ -79,13 +91,13 @@
                 <a class="page-link" (click)="setPage(pager.totalPages)"><i class="mdi mdi-chevron-double-right"></i></a>
               </li>
             </ul>
-          </nav> -->
+          </nav>
 
         </div>
-        <ng-template #noDBPacientes>
+        <ng-template #noDBProductos>
           <div>
             <br>
-            <h3 style="text-align:center;">No hay pacientes registrados en el sistema</h3>
+            <h3 style="text-align:center;">No hay productos registrados en el sistema</h3>
           </div>
         </ng-template>
 
@@ -113,12 +125,12 @@
             <div class="row">
               <div class="col">
                 <label for="recipient-name" class="col-form-label">Nombre</label>
-                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="producto.nombre">
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="productoAdd.nombre">
               </div>
              
               <div class="col">
                 <label for="recipient-name" class="col-form-label">Precio</label>
-                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="producto.precio">
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="productoAdd.precio">
               </div>
             </div>
           </div>
@@ -126,7 +138,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-success" (click)="restablcerCrearProducto()">Restrablecer</button>
-        <button type="button" class="btn btn-success" (click)="crearProducto()">Crear Producto</button>
+        <button type="button" class="btn btn-success" (click)='AddNewProduct()'>Crear Producto</button>
       </div>
     </div>
   </div>
