--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -14,20 +14,20 @@
       <div class="row justify-content-center">
         <div class="col-12 col-md-12 col-lg-12">
           <div class="row justify-content-center">
-              <!--end of col-->
-              <div class="input-group col-sm-8">
-                <div class="input-group-addon"><i class="fa fa-search"></i></div>
-                <input class="form-control form-control-lg form-control-borderless" type="search"
-                  [ngModelOptions]="{standalone: true}" [(ngModel)]="Search"
-                  placeholder="Buscar por nombre, numero de identificación ó edad">
-              </div>
-              <!--end of col-->
-              <div class="col-sm-4">
-                <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">
-                  <i class="fa fa-user-plus h4 text-body"></i> Agregar Productos
-                </button>
-              </div>
+            <!--end of col-->
+            <div class="input-group col-sm-8">
+              <div class="input-group-addon"><i class="fa fa-search"></i></div>
+              <input class="form-control form-control-lg form-control-borderless" type="search"
+                [ngModelOptions]="{standalone: true}" [(ngModel)]="Search"
+                placeholder="Buscar por nombre, numero de identificación ó edad">
             </div>
+            <!--end of col-->
+            <div class="col-sm-4">
+              <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">
+                <i class="fa fa-user-plus h4 text-body"></i> Agregar Productos
+              </button>
+            </div>
+          </div>
         </div>
         <!--end of col-->
       </div>
@@ -41,7 +41,7 @@
               #mf="mfDataTable" cellspacing="0" width="100%">
               <thead>
                 <tr>
-                  <th class="text-center"  scope="col">#</th>
+                  <th class="text-center" scope="col">#</th>
                   <th class="text-center" scope="col">Nombre</th>
                   <th class="text-center" scope="col">Precio</th>
                   <th class="text-center" scope="col">Acciones</th>
@@ -53,18 +53,16 @@
                   <td class="text-center">{{item.nombre }}</td>
                   <td class="text-center">{{item.precio }}</td>
                   <td class="text-center">
-                    <button type="button" class="btn btn-secondary fa fa-address-card-o" data-toggle="modal"
-                      tooltip="Editar usuario" tooltip="Menu paciente">
+                    <button type="button" class="btn btn-secondary fa fa-eye" data-toggle="modal"
+                      data-target="#verModal" (click)="productoVer=item" tooltip="Ver Producto">
                     </button>
-                    <button type="button" class="btn btn-secondary fa fa-address-card-o" data-toggle="modal"
-                      tooltip="Editar usuario" tooltip="Menu paciente">
+
+                    <button type="button" class="btn btn-secondary fa fa-edit" data-toggle="modal"
+                      data-target="#editarModal" (click)="productoEdit=item" tooltip="Editar Producto">
                     </button>
-                    <button type="button" class="btn btn-secondary fa fa-address-card-o" data-toggle="modal"
-                      tooltip="Editar usuario" tooltip="Menu paciente">
-                    </button>
-                    <button type="button" class="btn btn-secondary fa fa-address-card-o" data-toggle="modal"
-                      tooltip="Editar usuario" tooltip="Menu paciente">
-                    </button>
+                    <button type="button" class="btn btn-secondary fa fa-trash" data-toggle="modal" data-target="#eliminarModal"
+                    tooltip="Eliminar Producto" (click)="productoEliminar=item">
+                  </button>
                   </td>
                 </tr>
               </tbody>
@@ -88,7 +86,8 @@
                 <a class="page-link" (click)="setPage(pager.currentPage + 1)"><i class="mdi mdi-chevron-right"></i></a>
               </li>
               <li class="page-item" [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-                <a class="page-link" (click)="setPage(pager.totalPages)"><i class="mdi mdi-chevron-double-right"></i></a>
+                <a class="page-link" (click)="setPage(pager.totalPages)"><i
+                    class="mdi mdi-chevron-double-right"></i></a>
               </li>
             </ul>
           </nav>
@@ -108,7 +107,7 @@
 </div>
 
 
-<!-- Modal crear paciente -->
+<!-- Modal crear producto -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
   aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
@@ -125,12 +124,14 @@
             <div class="row">
               <div class="col">
                 <label for="recipient-name" class="col-form-label">Nombre</label>
-                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="productoAdd.nombre">
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="productoAdd.nombre">
               </div>
-             
+
               <div class="col">
                 <label for="recipient-name" class="col-form-label">Precio</label>
-                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="productoAdd.precio">
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="productoAdd.precio">
               </div>
             </div>
           </div>
@@ -143,3 +144,114 @@
     </div>
   </div>
 </div>
+
+
+<!-- Modal editar producto -->
+<div class="modal fade" id="editarModal" tabindex="-1" role="dialog" aria-labelledby="editarModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editarModalLabel">Editar datos del producto</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <div class="row">
+              <div class="col">
+                <label for="recipient-name" class="col-form-label">Nombre</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="productoEdit.nombre">
+              </div>
+
+              <div class="col">
+                <label for="recipient-name" class="col-form-label">Precio</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="productoEdit.precio">
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-success" (click)="restablcerCrearProducto()">Restrablecer</button>
+        <button type="button" class="btn btn-success" (click)='EditarProducto()'>Editar Producto</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Ver producto -->
+<div class="modal fade" id="verModal" tabindex="-1" role="dialog" aria-labelledby="verModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="verModalLabel">Editar datos del producto</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <div class="col">
+
+              <div class="row">
+                <label for="recipient-name" class="col-form-label">Nombre</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="productoVer.nombre" disabled>
+              </div>
+              <div class="row">
+                <label for="recipient-name" class="col-form-label">Precio</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="productoVer.precio" disabled>
+              </div>
+            </div>
+          </div>
+     
+      </form>
+    </div>
+  </div>
+</div>
+</div>
+
+<!-- Modal Eliminar producto -->
+<div class="modal fade" id="eliminarModal" tabindex="-1" role="dialog" aria-labelledby="eliminarModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="eliminarModalLabel">Está seguro de eliminar el producto?</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <div class="col">
+  
+                <div class="row">
+                  <label for="recipient-name" class="col-form-label">Nombre</label>
+                  <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                    [(ngModel)]="productoEliminar.nombre" disabled>
+                </div>
+                <div class="row">
+                  <label for="recipient-name" class="col-form-label">Precio</label>
+                  <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                    [(ngModel)]="productoEliminar.precio" disabled>
+                </div>
+              </div>
+            </div>
+
+       <div class="modal-footer">
+        <button type="button" class="btn btn-outline-error" (click)="restablcerCrearProducto()">NO</button>
+        <button type="button" class="btn btn-danger" (click)='EditarProducto()'>SI</button>
+      </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  </div>
