CRUD Productos Completo

--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -248,7 +248,7 @@
 
        <div class="modal-footer">
         <button type="button" class="btn btn-outline-error" (click)="restablcerCrearProducto()">NO</button>
-        <button type="button" class="btn btn-danger" (click)='EditarProducto()'>SI</button>
+        <button type="button" class="btn btn-danger" (click)='EliminarProducto()'>SI</button>
       </div>
         </form>
       </div>
