lista carga de clientes desde el backend

--- a/src/app/pages/client/client.component.html
+++ b/src/app/pages/client/client.component.html
@@ -99,7 +99,7 @@
         <ng-template #noDBPacientes>
           <div>
             <br>
-            <h3 style="text-align:center;">No hay pacientes registrados en el sistema</h3>
+            <h3 style="text-align:center;">No hay clientes registrados en el sistema</h3>
           </div>
         </ng-template>
 
