liata funcionalidad editar cliente

--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -19,7 +19,7 @@
               <div class="input-group-addon"><i class="fa fa-search"></i></div>
               <input class="form-control form-control-lg form-control-borderless" type="search"
                 [ngModelOptions]="{standalone: true}" [(ngModel)]="Search"
-                placeholder="Buscar por nombre, numero de identificación ó edad">
+                placeholder="Buscar producto">
             </div>
             <!--end of col-->
             <div class="col-sm-4">
@@ -211,7 +211,7 @@
               </div>
             </div>
           </div>
-     
+
       </form>
     </div>
   </div>
@@ -232,7 +232,7 @@
           <form>
             <div class="form-group">
               <div class="col">
-  
+
                 <div class="row">
                   <label for="recipient-name" class="col-form-label">Nombre</label>
                   <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
