--- a/src/app/pages/client/client.component.html
+++ b/src/app/pages/client/client.component.html
@@ -18,8 +18,7 @@
             <div class="input-group col-sm-8">
               <div class="input-group-addon"><i class="fa fa-search"></i></div>
               <input class="form-control form-control-lg form-control-borderless" type="search"
-                [ngModelOptions]="{standalone: true}" [(ngModel)]="Search"
-                placeholder="Buscar por nombre, numero de identificación ó edad">
+                [ngModelOptions]="{standalone: true}" [(ngModel)]="Search" placeholder="Buscar cliente">
             </div>
             <!--end of col-->
             <div class="col-sm-4">
@@ -44,10 +43,7 @@
                   <th class="th-sm" scope="col">Tipo de documento</th>
                   <th scope="col">Numero de documento</th>
                   <th scope="col">Primer nombre</th>
-                  <th scope="col">Segundo Nombre</th>
                   <th scope="col">Primer Apellido</th>
-                  <th scope="col">Segundo Apellido</th>
-                  <th scope="col">Celular</th>
                   <th scope="col">Correo</th>
                   <th scope="col">Acciones</th>
                 </tr>
@@ -58,14 +54,18 @@
                   <td>{{item.identification_type}}</td>
                   <td>{{item.identification_number}}</td>
                   <td>{{item.first_name}}</td>
-                  <td>{{item.second_name}}</td>
                   <td>{{item.surname}}</td>
-                  <td>{{item.second_surname}}</td>
-                  <td>{{item.phone}}</td>
                   <td>{{item.email}}</td>
-                  <td>
-                    <button type="button" class="btn btn-secondary fa fa-address-card-o" data-toggle="modal"
-                      tooltip="Editar usuario" tooltip="Menu paciente">
+                  <td class="text-center">
+                    <button type="button" class="btn btn-secondary fa fa-eye" data-toggle="modal"
+                      data-target="#verModal" (click)="clientVer=item" tooltip="Ver Cliente">
+                    </button>
+
+                    <button type="button" class="btn btn-secondary fa fa-edit" data-toggle="modal"
+                      data-target="#editarModal" (click)="clientEdit=item" tooltip="Editar Cliente">
+                    </button>
+                    <button type="button" class="btn btn-secondary fa fa-trash" data-toggle="modal"
+                      data-target="#eliminarModal" tooltip="Eliminar Cliente" (click)="productoEliminar=item">
                     </button>
                   </td>
                 </tr>
@@ -111,7 +111,7 @@
 </div>
 
 
-<!-- Modal crear producto -->
+<!-- Modal crear cliente -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
   aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
@@ -127,13 +127,14 @@
           <div class="form-group">
             <div class="row">
               <div class="col-4">
-                  <label class="col-form-label">Tipo documento</label>
-                  <select id="tpdoc" class="form-control" [ngModelOptions]="{standalone: true}" [(ngModel)]="clientAdd.identification_type">
-                    <option>CC</option>
-                    <option>TI</option>
-                    <option>CE</option>
-                    <option>RC</option>
-                  </select>
+                <label class="col-form-label">Tipo documento</label>
+                <select id="tpdoc" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientAdd.identification_type">
+                  <option>CC</option>
+                  <option>TI</option>
+                  <option>CE</option>
+                  <option>RC</option>
+                </select>
               </div>
               <div class="col-8">
                 <label for="recipient-name" class="col-form-label">Numero documento</label>
@@ -170,25 +171,183 @@
             </div>
           </div>
           <div class="form-group">
-              <div class="row">
-                <div class="col">
-                  <label for="recipient-name" class="col-form-label">Celular</label>
-                  <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
-                    [(ngModel)]="clientAdd.phone">
-                </div>
+            <div class="row">
+              <div class="col">
+                <label for="recipient-name" class="col-form-label">Celular</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientAdd.phone">
+              </div>
 
-                <div class="col">
-                  <label for="recipient-name" class="col-form-label">Correo</label>
-                  <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
-                    [(ngModel)]="clientAdd.email">
-                </div>
+              <div class="col">
+                <label for="recipient-name" class="col-form-label">Correo</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientAdd.email">
               </div>
             </div>
+          </div>
         </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-success" (click)="restablcerCrearCliente()">Restrablecer</button>
         <button type="button" class="btn btn-success" (click)='AddNewClient()'>Crear Cliente</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Ver cliente -->
+<div class="modal fade" id="verModal" tabindex="-1" role="dialog" aria-labelledby="verModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="verModalLabel">Editar cliente</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <div class="row">
+              <div class="col-4">
+                <label class="col-form-label">Tipo documento</label>
+                <input id="tpdoc" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientVer.identification_type" disabled>
+              </div>
+              <div class="col-8">
+                <label for="recipient-name" class="col-form-label">Numero documento</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientVer.identification_number" disabled>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="row">
+              <div class="col">
+                <label for="recipient-name" class="col-form-label">Primer nombre</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientVer.first_name" disabled>
+              </div>
+
+              <div class="col">
+                <label for="recipient-name" class="col-form-label">Segundo nombre</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientVer.second_name" disabled>
+              </div>
+
+              <div class="col">
+                <label for="recipient-name" class="col-form-label">Primer apellido</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientVer.surname" disabled>
+              </div>
+
+              <div class="col">
+                <label for="recipient-name" class="col-form-label">Segundo Apellido</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientVer.second_surname" disabled>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="row">
+              <div class="col">
+                <label for="recipient-name" class="col-form-label">Celular</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientVer.phone" disabled>
+              </div>
+
+              <div class="col">
+                <label for="recipient-name" class="col-form-label">Correo</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientVer.email" disabled>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal editar producto -->
+<div class="modal fade" id="editarModal" tabindex="-1" role="dialog" aria-labelledby="editarModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editarModalLabel">Editar datos del cliente</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <div class="row">
+              <div class="col-4">
+                <label class="col-form-label">Tipo documento</label>
+                <select id="tpdoc" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientEdit.identification_type" disabled>
+                  <option>CC</option>
+                  <option>TI</option>
+                  <option>CE</option>
+                  <option>RC</option>
+                </select>
+              </div>
+              <div class="col-8">
+                <label for="recipient-name" class="col-form-label">Numero documento</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientEdit.identification_number" disabled>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="row">
+              <div class="col">
+                <label for="recipient-name" class="col-form-label">Primer nombre</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientEdit.first_name">
+              </div>
+
+              <div class="col">
+                <label for="recipient-name" class="col-form-label">Segundo nombre</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientEdit.second_name">
+              </div>
+
+              <div class="col">
+                <label for="recipient-name" class="col-form-label">Primer apellido</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientEdit.surname">
+              </div>
+
+              <div class="col">
+                <label for="recipient-name" class="col-form-label">Segundo Apellido</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientEdit.second_surname">
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="row">
+              <div class="col">
+                <label for="recipient-name" class="col-form-label">Celular</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientEdit.phone">
+              </div>
+
+              <div class="col">
+                <label for="recipient-name" class="col-form-label">Correo</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="clientEdit.email" disabled>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-success" (click)="restablcerCrearCliente()">Restrablecer</button>
+        <button type="button" class="btn btn-success" (click)='EditarClient()'>Editar Cliente</button>
       </div>
     </div>
   </div>
