--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -32,6 +32,8 @@
         <!--end of col-->
       </div>
 
+      
+
       <br><br>
 
       <div class="row justify-content-center">
@@ -60,9 +62,9 @@
                     <button type="button" class="btn btn-secondary fa fa-edit" data-toggle="modal"
                       data-target="#editarModal" (click)="productoEdit=item" tooltip="Editar Producto">
                     </button>
-                    <button type="button" class="btn btn-secondary fa fa-trash" data-toggle="modal" data-target="#eliminarModal"
-                    tooltip="Eliminar Producto" (click)="productoEliminar=item">
-                  </button>
+                    <button type="button" class="btn btn-secondary fa fa-trash" data-toggle="modal"
+                      data-target="#eliminarModal" tooltip="Eliminar Producto" (click)="productoEliminar=item">
+                    </button>
                   </td>
                 </tr>
               </tbody>
@@ -211,47 +213,48 @@
               </div>
             </div>
           </div>
-     
-      </form>
-    </div>
-  </div>
-</div>
-</div>
 
-<!-- Modal Eliminar producto -->
-<div class="modal fade" id="eliminarModal" tabindex="-1" role="dialog" aria-labelledby="eliminarModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="eliminarModalLabel">Está seguro de eliminar el producto?</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <form>
-            <div class="form-group">
-              <div class="col">
-  
-                <div class="row">
-                  <label for="recipient-name" class="col-form-label">Nombre</label>
-                  <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
-                    [(ngModel)]="productoEliminar.nombre" disabled>
-                </div>
-                <div class="row">
-                  <label for="recipient-name" class="col-form-label">Precio</label>
-                  <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
-                    [(ngModel)]="productoEliminar.precio" disabled>
-                </div>
-              </div>
-            </div>
-
-       <div class="modal-footer">
-        <button type="button" class="btn btn-outline-error" (click)="restablcerCrearProducto()">NO</button>
-        <button type="button" class="btn btn-danger" (click)='EliminarProducto()'>SI</button>
-      </div>
         </form>
       </div>
     </div>
   </div>
+</div>
+
+<!-- Modal Eliminar producto -->
+<div class="modal fade" id="eliminarModal" tabindex="-1" role="dialog" aria-labelledby="eliminarModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="eliminarModalLabel">Está seguro de eliminar el producto?</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <div class="col">
+
+              <div class="row">
+                <label for="recipient-name" class="col-form-label">Nombre</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="productoEliminar.nombre" disabled>
+              </div>
+              <div class="row">
+                <label for="recipient-name" class="col-form-label">Precio</label>
+                <input type="text" class="form-control" [ngModelOptions]="{standalone: true}"
+                  [(ngModel)]="productoEliminar.precio" disabled>
+              </div>
+            </div>
+          </div>
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-outline-error" (click)="restablcerCrearProducto()">NO</button>
+            <button type="button" class="btn btn-danger" (click)='EliminarProducto()'>SI</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
+</div>
